hot fix for line spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,7 +3,7 @@
   font-size: 100%;
 }
 p {
-  line-height: 2%;
+  /* line-height: 2%; */
 }
 
 h5 {
